package work4.iterator;

public interface Aggregate {
    Iterator createIterator();
}
