package work4.iterator;

public interface Iterator {
    boolean hasNext();
    Object next();
}
